# all

./: .gitignore  README.md
templates/churn/: .gitignore  README.md  main.py  params.json  pyproject.toml
templates/churn/code/: config.py  data.py  eval.py  main.py  model.py  serve.py  train.py
templates/churn/src/: config.py  data.py  eval.py  model.py  serve.py  train.py
templates/rag/: .example_env  rag_template_legal_docs.ipynb  readme.md
templates/recommendation-system/: baseline.py  config.py  data.py  eda.py  main.py  params.json  requirements.txt  train.py
templates/recommendations/: README.md  config.py  data.py  eda.py  main.py  models.py  params.json  requirements-common.txt  requirements-jax.txt  requirements-tensorflow.txt  requirements-torch.txt  requirements.txt  train.py
templates/recommendations/_data/: games_analysis.py  games_gen_dummy_data.py  twitter_analysis.py  twitter_gen_dummy_data.py
templates/recommendations/_data/dummy_data/: games.csv  users.csv
